# fintp_eventswatcher

./: Makefile.am  README.md  configure.ac  fintp_eventswatcher.sln  fintp_eventswatcher.vcxproj  fintp_eventswatcher.vcxproj.filters
src/: EventsWatcher.cpp  EventsWatcher.h  EventsWatcherDbOp.cpp  EventsWatcherMain.cpp  VersionInfo.cpp
